[package]
name = "rustodoro"
version = "0.1.0"
authors = ["Hernawan Fa'iz Abdillah <hernawan.faiz@abdillah.me>"]

[dependencies]
libc = "0.2.42"
serde_json = "1.0"

[dependencies.ncurses]
version = "5.88.0"
features = [ "" ]

[[bin]]
name = "cursodoro"
path = "src/bin/main.rs"

[lib]
name = "rustodoro"
crate-type = ["rlib", "dylib"]
